Add html5 canvas

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,2 +1,5 @@
 //Main scss file.  @import everything here and ONLY compile this file.
+
 @import 'header.scss';
+@import 'game.scss';
+@import 'footer.scss';
