--- a/scss/game.scss
+++ b/scss/game.scss
@@ -11,4 +11,9 @@ padding:1rem 0;
         
 
     }
+    #pad{
+        height:600px;
+        width:800px;
+        background-color:white;
+    }
 }
