--- a/css/main.css
+++ b/css/main.css
@@ -8,3 +8,7 @@
     background-color: white;
     display: block;
     margin: auto; }
+  .game-container #pad {
+    height: 600px;
+    width: 800px;
+    background-color: white; }
