--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,25 @@
+header {
+  min-height: 5rem;
+  background-color: #d6c6b1;
+  padding: 1rem; }
+  header .banner {
+    max-height: 5rem;
+    float: left; }
+  header nav .nav-ul {
+    list-style: none;
+    float: right; }
+    header nav .nav-ul li {
+      display: inline-block;
+      margin: 0.25rem; }
+      header nav .nav-ul li a {
+        text-decoration: none;
+        text-transform: uppercase;
+        background-color: #823a51;
+        padding: 1rem 2rem;
+        border-radius: 999px;
+        color: whitesmoke;
+        font-family: 'Arial'; }
+
 .game-container {
   background-color: gray;
   padding: 1rem 0; }
@@ -12,3 +34,14 @@
     height: 600px;
     width: 800px;
     background-color: white; }
+
+footer {
+  min-height: 3rem;
+  background-color: #823a51;
+  display: flex;
+  flex-direction: column; }
+  footer .lower-footer {
+    margin-top: auto;
+    text-align: center;
+    margin-bottom: 1rem;
+    color: #d6c6b1; }
