--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 //Main scss file.  @import everything here and ONLY compile this file.
 
+@import '_variables.scss'; //Good etiquette to underscore partials like variables.
 @import 'header.scss';
 @import 'game.scss';
 @import 'footer.scss';
