--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,5 +2,6 @@
 
 @import '_variables.scss'; //Good etiquette to underscore partials like variables.
 @import 'header.scss';
+@import 'general.scss';
 @import 'game.scss';
 @import 'footer.scss';
