--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,7 @@
 //Main scss file.  @import everything here and ONLY compile this file.
 
+//It's important that the files are imported in the correct order.  Variables should be initialized before the code, etc...
+
 @import '_variables.scss'; //Good etiquette to underscore partials like variables.
 @import 'header.scss';
 @import 'general.scss';
