--- a/scss/header.scss
+++ b/scss/header.scss
@@ -7,6 +7,8 @@ header{
     .banner{
         max-height:5rem;
         float:left;
+        border-radius: 5px;
+        box-shadow: 1px 1px 4px black;
     }
     nav{
 
