--- a/scss/general.scss
+++ b/scss/general.scss
@@ -11,3 +11,13 @@
     margin:auto;
     display:block;
 }
+
+.page-header{
+    font-family:arial;
+    text-transform: uppercase;
+    width:100%;
+    background-color: gray;
+    // margin: 1rem -1rem;
+    padding:1rem;
+    border-radius:10px;
+}
