--- a/css/main.css
+++ b/css/main.css
@@ -61,9 +61,21 @@ header {
   display: block;
   margin: 0.5rem 0;
   border-radius: 5px;
-  width: 20%;
+  width: 70%;
   height: 2rem;
+  margin: 0.5rem auto;
   padding: 0 0 0 1rem; }
+.registration-container .registration-form {
+  background-color: #823a51;
+  width: 50%;
+  padding: 1rem;
+  margin: 1rem;
+  border-radius: 10px; }
+.registration-container .registration-submit {
+  display: block;
+  margin: auto;
+  border-radius: 2px;
+  margin-top: 1rem; }
 
 footer {
   min-height: 3rem;
