--- a/scss/registration.scss
+++ b/scss/registration.scss
@@ -4,8 +4,24 @@
         display:block;
         margin: 0.5rem 0;
         border-radius: 5px;
-        width:20%;
+        width:70%;
         height:2rem;
+        margin: 0.5rem auto;
         padding: 0 0 0 1rem;
+    }
+
+    .registration-form{
+        background-color: $color-1;
+        width:50%;
+        padding:1rem;
+        margin:1rem;
+        border-radius:10px;
+    }
+
+    .registration-submit{
+        display:block;
+        margin:auto;
+        border-radius:2px;
+        margin-top:1rem;
     }
 }
