--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,24 @@ header {
   border-radius: 2px;
   margin-top: 1rem; }
 
+.login-container .login-form {
+  background-color: #823a51;
+  width: 20%;
+  border-radius: 5px;
+  margin: 1rem;
+  padding: 1rem; }
+.login-container #user, .login-container #pass {
+  display: block;
+  margin: 0.5rem auto;
+  border-radius: 3px;
+  text-align: center;
+  width: 80%; }
+.login-container .login-submit {
+  margin: auto;
+  display: block;
+  border-radius: 2px;
+  margin-top: 1rem; }
+
 footer {
   min-height: 3rem;
   background-color: #823a51;
