--- a/scss/header.scss
+++ b/scss/header.scss
@@ -30,7 +30,8 @@ header{
                     border-radius: 999px;
                     color:whitesmoke;
                     font-family: 'Arial';
-
+                    font-weight:bold;
+                    box-shadow:2px 2px 4px black;
                 }
             }
         }
