--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,10 @@ header {
   padding: 1rem;
   border-radius: 10px; }
 
+body {
+  color: black;
+  font-family: arial; }
+
 .game-container {
   background-color: gray;
   padding: 5rem 0; }
@@ -107,3 +111,5 @@ footer {
     text-align: center;
     margin-bottom: 1rem;
     color: #d6c6b1; }
+
+/*# sourceMappingURL=main.css.map */
