--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,9 @@ body {
   color: black;
   font-family: arial; }
 
+html, body {
+  height: 100%; }
+
 .game-container {
   background-color: gray;
   padding: 5rem 0; }
@@ -62,6 +65,15 @@ body {
     background-color: white;
     margin: 1rem auto;
     display: block; }
+  .game-container .game-easter-egg {
+    background-color: #999;
+    height: 3px;
+    width: 3px;
+    content: "";
+    display: block;
+    position: absolute;
+    top: 100px;
+    right: 100px; }
 
 .registration-container .registration-field {
   display: block;
@@ -111,3 +123,5 @@ footer {
     text-align: center;
     margin-bottom: 1rem;
     color: #d6c6b1; }
+
+/*# sourceMappingURL=main.css.map */
