--- a/scss/game.scss
+++ b/scss/game.scss
@@ -18,4 +18,15 @@ padding:5rem 0;
         margin:1rem auto;
         display:block;
     }
+    .game-easter-egg{
+        background-color: #999;
+        height:3px;
+        width:3px;
+        content:"";
+        display:block;
+        position:absolute;
+        top:100px;
+        right:100px;
+    }
+    
 }
