--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,32 @@ header {
         font-family: 'Arial';
         font-weight: bold;
         box-shadow: 2px 2px 4px black; }
+  header .loggedintopright {
+    background-color: #823a51;
+    font-weight: bold;
+    position: relative; }
+    header .loggedintopright .loggedinsubmenu {
+      display: none;
+      position: absolute;
+      top: 2.1rem;
+      padding: 0.5rem 0;
+      background-color: black;
+      opacity: 0.9;
+      margin-left: -1rem;
+      border-radius: 3px; }
+      header .loggedintopright .loggedinsubmenu .logout-button {
+        background-color: black;
+        color: white;
+        font-size: 1.2rem;
+        border: none;
+        opacity: 0.9;
+        border-radius: 3px;
+        padding: 0 1rem;
+        box-shadow: none; }
+        header .loggedintopright .loggedinsubmenu .logout-button:hover {
+          background-color: gray; }
+    header .loggedintopright .loggedinisactive {
+      display: block; }
 
 .container {
   max-width: 1200px;
