--- a/scss/header.scss
+++ b/scss/header.scss
@@ -36,4 +36,37 @@ header{
             }
         }
     }
+    .loggedintopright{
+        background-color:$color-1;
+        font-weight:bold;
+        position:relative;
+        .loggedinsubmenu{
+            display:none;
+            position: absolute;
+            top:2.1rem;
+            padding:0.5rem 0;
+            background-color:black;
+            opacity:0.9;
+            margin-left:-1rem;
+            border-radius:3px;
+           
+            .logout-button{
+                background-color: black;
+                color:white;
+                font-size:1.2rem;
+                border:none;
+                opacity:0.9;
+                border-radius:3px;
+                padding:0 1rem;
+                box-shadow:none;
+                &:hover{
+                    background-color:gray;
+                }
+            }
+        }
+        .loggedinisactive{
+            display:block;
+        }
+        
+    }
 }
