--- a/scss/header.scss
+++ b/scss/header.scss
@@ -9,6 +9,9 @@ header{
         float:left;
         border-radius: 5px;
         box-shadow: 1px 1px 4px black;
+        padding:5px 1rem;
+        background-color:white;
+        margin-top:-5px;
     }
     nav{
 
