--- a/scss/game.scss
+++ b/scss/game.scss
@@ -28,5 +28,15 @@ padding:5rem 0;
         top:100px;
         right:100px;
     }
-    
+    .mobile-notice{
+        p{
+            color:white;
+            font-size:1.5rem;
+            text-align:center;
+            width:80%;
+            margin:1rem auto;
+            display:block;
+
+        }
+    }
 }
