--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,14 @@ html, body {
 .mobile-notice {
   display: none; }
 
+.dev-notice {
+  background-color: #990000;
+  color: white;
+  border-radius: 10px;
+  padding: 1rem;
+  margin: 1rem;
+  font-style: italic; }
+
 .game-container {
   background-color: gray;
   padding: 5rem 0; }
