--- a/scss/general.scss
+++ b/scss/general.scss
@@ -34,3 +34,11 @@ html,body{
 .mobile-notice{
     display:none;
 }
+.dev-notice{
+    background-color:#990000;
+    color:white;
+    border-radius:10px;
+    padding:1rem;
+    margin:1rem;
+    font-style:italic;
+}
