turned php debug on, added news section on main page

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 
 @import '_variables.scss'; //Good etiquette to underscore partials like variables.
 @import 'header.scss';
+@import 'main-page.scss';
 @import 'general.scss';
 @import 'game.scss';
 @import 'registration.scss';
