--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,26 @@ header {
     header .loggedintopright .loggedinisactive {
       display: block; }
 
+.main-page-container .main-page-header {
+  margin-top: 3rem;
+  margin-left: 1rem;
+  font-size: 2.5rem; }
+.main-page-container .news-clipping {
+  margin: 2rem 1rem;
+  border-top: 1px solid gray; }
+  .main-page-container .news-clipping pre {
+    padding-top: 0;
+    margin-top: 0;
+    line-height: 1; }
+  .main-page-container .news-clipping h2 {
+    margin-bottom: 0.5rem; }
+  .main-page-container .news-clipping p {
+    padding-left: 0.5rem; }
+  .main-page-container .news-clipping img {
+    width: 20%;
+    padding: 5px;
+    border: 1px solid gray; }
+
 .container {
   max-width: 1200px;
   margin-left: auto;
