--- a/scss/general.scss
+++ b/scss/general.scss
@@ -39,3 +39,12 @@ html,body{
     margin:1rem;
     font-style:italic;
 }
+
+.success-notice{
+    background-color:#009900;
+    color:white;
+    border-radius:10px;
+    padding:1rem;
+    margin:1rem;
+    font-style:italic;
+}
