--- a/scss/header.scss
+++ b/scss/header.scss
@@ -16,14 +16,17 @@ header{
     nav{
 
 
-        .nav-ul{
+        .nav-container{
             list-style: none;
             float:right;
+            margin-top:1rem;
 
-            li{
-                display: inline-block;
+            .nav-item{
+                // display: inline-block;
                 margin: 0.25rem;
+                float: right;
 
+                
                 a{
 
                     text-decoration:none;
@@ -46,7 +49,7 @@ header{
         .loggedinsubmenu{
             display:none;
             position: absolute;
-            top:2.1rem;
+            top:2.8rem;
             padding:0.5rem 0;
             background-color:black;
             opacity:0.9;
@@ -72,4 +75,70 @@ header{
         }
         
     }
+}
+
+
+.hamburger-menu{
+    height:3rem;
+    margin-left:2rem;
+}
+
+
+
+.popout-menu{
+    position:fixed;
+    display:block;
+    right:-600px;
+    transition-duration:1s;
+    height:100%;
+    max-width:600px;
+    width:100%;
+    z-index:99;
+    background-color:#ddd;
+    visibility: hidden;
+
+    ul{
+        margin-left:1rem;
+        hr{
+            width:50%;
+            margin:0;
+        }
+        li{
+            list-style-type: none;
+            margin:1rem 0;
+            // border-bottom:1px solid black;
+            a{
+                text-transform:uppercase;
+                color:black;
+                text-decoration: none;
+                font-size:1.5rem;
+                padding: 1rem 3rem 1rem 0;
+
+            }
+        }
+    }
+}
+.popout-menu-is-open{
+    right:0;
+    visibility:visible;
+    transition-duration: 1s;
+}
+.popout-background{
+    height:100%;
+    width:100%;
+    position:fixed;
+    background-color:rgba(0,0,0,0.5);
+    z-index:95;
+    display:none;
+}
+.popout-background-is-active{
+    display:block;
+}
+.hamburger-menu-popout{
+    // float:right;
+}
+.hamburger-menu-popout-container{
+    height:5rem;
+    width:90%;
+    margin:2rem auto;
 }
