--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@
 @import 'registration.scss';
 @import 'login.scss';
 @import 'forum.scss';
+@import 'scoreboard.scss';
 @import 'footer.scss';
 
 @import 'media-queries.scss';
