--- a/scss/header.scss
+++ b/scss/header.scss
@@ -134,9 +134,9 @@ header{
 .popout-background-is-active{
     display:block;
 }
-.hamburger-menu-popout{
-    // float:right;
-}
+// .hamburger-menu-popout{
+//     // float:right;
+// }
 .hamburger-menu-popout-container{
     height:5rem;
     width:90%;
