--- a/scss/media-queries.scss
+++ b/scss/media-queries.scss
@@ -28,15 +28,15 @@
                 top:2.5rem;
             }
         }
-        nav{
-            .nav-ul{
-                    li{
-                    a{
-                        // font-size:0.7rem;
-                    }
-                }
-            }
-        }
+        // nav{
+        //     .nav-ul{
+        //             li{
+        //             a{
+        //                 // font-size:0.7rem;
+        //             }
+        //         }
+        //     }
+        // }
     }
 
     // .loggedintopright{
