--- a/scss/scoreboard.scss
+++ b/scss/scoreboard.scss
@@ -4,6 +4,7 @@
     background-color:#333;
     padding:2rem;
     display: flex;
+    border-radius:10px;
     .scoreboard-content{
         width:40%;
         float:left;
