--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,10 @@
+/*
+*******************************
+Food n' Boom'd
+Variables SCSS
+Version 1
+*******************************
+*/
+
 $color-1: #823a51; //burgundy
 $color-2: #d6c6b1; //beige
