--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,3 +1,11 @@
+/*
+*******************************
+Food n' Boom'd
+Footer SCSS
+Version 1
+*******************************
+*/
+
 footer{
     min-height:3rem;
     background-color:$color-1;
