--- a/scss/general.scss
+++ b/scss/general.scss
@@ -1,3 +1,11 @@
+/*
+*******************************
+Food n' Boom'd
+General SCSS
+Version 1
+*******************************
+*/
+
 //This file is for general styling, like containers and sections
 
 .container{
