--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,3 +1,11 @@
+/*
+*******************************
+Food n' Boom'd
+Header SCSS
+Version 1
+*******************************
+*/
+
 header{
     min-height: 5rem;
     background-color: $color-2;
