--- a/scss/login.scss
+++ b/scss/login.scss
@@ -1,3 +1,11 @@
+/*
+*******************************
+Food n' Boom'd
+Login SCSS
+Version 1
+*******************************
+*/
+
 .login-container{
 
 .login-form{
