--- a/scss/main-page.scss
+++ b/scss/main-page.scss
@@ -1,3 +1,11 @@
+/*
+*******************************
+Food n' Boom'd
+Main Page SCSS
+Version 1
+*******************************
+*/
+
 .main-page-container{
     .main-page-header{
         // padding:5rem 0 0 0;
