--- a/scss/registration.scss
+++ b/scss/registration.scss
@@ -1,3 +1,11 @@
+/*
+*******************************
+Food n' Boom'd
+Registration SCSS
+Version 1
+*******************************
+*/
+
 .registration-container{
 
     .registration-field{
