--- a/scss/scoreboard.scss
+++ b/scss/scoreboard.scss
@@ -1,3 +1,11 @@
+/*
+*******************************
+Food n' Boom'd
+Scoreboard SCSS
+Version 1
+*******************************
+*/
+
 .scoreboard-container{
     width:90%;
     margin:1rem auto;
