--- a/scss/forum.scss
+++ b/scss/forum.scss
@@ -1,3 +1,11 @@
+/*
+*******************************
+Food n' Boom'd
+Forum SCSS
+Version 1
+*******************************
+*/
+
 .forum-post-block{
     width:40%;
     min-height:5rem;
