--- a/scss/game.scss
+++ b/scss/game.scss
@@ -1,3 +1,11 @@
+/*
+*******************************
+Food n' Boom'd
+Game SCSS
+Version 1
+*******************************
+*/
+
 .game-container{
 background-color:gray;
 padding:2rem 0;
