--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,12 @@
+/*
+*******************************
+Food n' Boom'd
+Main SCSS
+Version 1
+*******************************
+*/
+
+
 //Main scss file.  @import everything here and ONLY compile this file.
 
 //It's important that the files are imported in the correct order.  Variables should be initialized before the code, etc...
