--- a/scss/media-queries.scss
+++ b/scss/media-queries.scss
@@ -1,3 +1,11 @@
+/*
+*******************************
+Food n' Boom'd
+Media Query SCSS
+Version 1
+*******************************
+*/
+
 @media only screen and (max-width: 1100px) {
     
     header{
