--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,5 +21,6 @@ Version 1
 @import 'forum.scss';
 @import 'scoreboard.scss';
 @import 'footer.scss';
+@import 'changepass.scss';
 
 @import 'media-queries.scss';
