--- a/css/main.css
+++ b/css/main.css
@@ -38,16 +38,6 @@ header {
     header nav .nav-container .nav-item {
       margin: 0.25rem;
       float: right; }
-      header nav .nav-container .nav-item a {
-        text-decoration: none;
-        text-transform: uppercase;
-        background-color: #823a51;
-        padding: 1rem 1.5rem;
-        border-radius: 999px;
-        color: whitesmoke;
-        font-family: 'Arial';
-        font-weight: bold;
-        box-shadow: 2px 2px 4px black; }
   header .loggedintopright {
     background-color: #823a51;
     font-weight: bold;
@@ -61,7 +51,7 @@ header {
       opacity: 0.9;
       margin-left: -1rem;
       border-radius: 3px; }
-      header .loggedintopright .loggedinsubmenu .logout-button {
+      header .loggedintopright .loggedinsubmenu .logout-button, header .loggedintopright .loggedinsubmenu a {
         background-color: black;
         color: white;
         font-size: 1.2rem;
@@ -69,9 +59,17 @@ header {
         opacity: 0.9;
         border-radius: 3px;
         padding: 0 1rem;
-        box-shadow: none; }
-        header .loggedintopright .loggedinsubmenu .logout-button:hover {
+        box-shadow: none;
+        text-align: center;
+        margin: auto;
+        display: block; }
+        header .loggedintopright .loggedinsubmenu .logout-button:hover, header .loggedintopright .loggedinsubmenu a:hover {
           background-color: gray; }
+      header .loggedintopright .loggedinsubmenu a {
+        font-weight: 500;
+        padding: 0.5rem;
+        font-size: 1rem;
+        text-decoration: none; }
     header .loggedintopright .loggedinisactive {
       display: block; }
 
@@ -409,6 +407,15 @@ footer {
     text-align: center;
     margin-bottom: 1rem;
     color: #d6c6b1; }
+
+.change-pass-section form {
+  width: 50%;
+  background-color: #d6c6b1;
+  margin: 1rem auto;
+  padding: 2rem; }
+  .change-pass-section form input {
+    display: block;
+    margin: 0.5rem auto; }
 
 /*
 *******************************
