--- a/scss/general.scss
+++ b/scss/general.scss
@@ -62,3 +62,9 @@ html,body{
     clear:both;
     content:"";
 }
+.user-satisfaction-wrapper{
+    margin: 4rem 3% 15rem 3%;
+    h2,p{
+        text-align:center;
+    }
+}
